# cryptpilot

./: .gitignore  .shellcheckrc  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.crypt  Dockerfile.fde  Dockerfile.verity  Makefile  README.md  README_zh.md  TODO  build-rpm.sh  build.rs  build_deb.sh  clippy.toml  cryptpilot-convert.sh  cryptpilot-enhance.sh  cryptpilot.spec  development.md  test-kbs-volume.sh  test-kms-volume.sh  test-system-encryption.sh
.github/workflows/: build-deb.yml  build-docker.yml  build-rpm.yml  build-test-image.yml  clippy.yml  rust-fmt.yml  shellcheck.yml  test-kbs-volume.yml  test-kms-volume.yml  test-system-encryption.yml  test.yml
.qoder/commands/: create_release_pr.md
APPLICATION/cryptpilot-crypt/: buildspec.yml  version.yml
APPLICATION/cryptpilot-fde/: buildspec.yml  version.yml
APPLICATION/cryptpilot-verity/: buildspec.yml  version.yml
benchmarks/: README.md  README_zh.md  test.fio
cryptpilot-core/: Cargo.toml  build.rs
cryptpilot-core/src/: cli.rs  lib.rs  main.rs  types.rs
cryptpilot-core/src/cmd/: close.rs  init.rs  mod.rs  open.rs  show.rs  verity.rs
cryptpilot-core/src/cmd/boot_service/: mod.rs
cryptpilot-core/src/cmd/boot_service/stage/: after_sysroot.rs  before_sysroot.rs  mod.rs
cryptpilot-core/src/cmd/config/: check.rs
cryptpilot-core/src/cmd/fde/: dump_config.rs
cryptpilot-core/src/cmd/fde/disk/: artifacts.rs  kernel.rs  partition_table.rs  uki.rs
cryptpilot-core/src/config/: encrypt.rs  fde.rs  mod.rs  volume.rs
cryptpilot-core/src/config/source/: mod.rs
cryptpilot-core/src/fs/: blkid.rs  cmd.rs  kernel_module.rs  luks2.rs  mkfs.rs  mod.rs  mount.rs  nbd.rs
cryptpilot-core/src/fs/block/: devicemapper.rs  dummy.rs  mod.rs
cryptpilot-core/src/fs/block/blktrace/: mod.rs  wrapper.h
cryptpilot-core/src/measure/attestation_agent/: mod.rs
cryptpilot-core/src/measure/attestation_agent/ttrpc_protocol/: attestation_agent.rs  attestation_agent_ttrpc.rs  mod.rs
cryptpilot-core/src/provider/: exec.rs  helper.rs  kbs.rs  kms.rs  mod.rs  oidc.rs  otp.rs
cryptpilot-core/src/provider/kbs/: mod.rs
cryptpilot-core/src/provider/kbs/protos/: confidential-data-hub.proto
cryptpilot-core/src/provider/kbs/ttrpc_protocol/: confidential_data_hub.rs  confidential_data_hub_ttrpc.rs  mod.rs
cryptpilot-crypt/: Cargo.toml  README.md  README_zh.md  build.rs
cryptpilot-crypt/docs/: configuration.md  configuration_zh.md  key-providers.md  key-providers_zh.md  quick-start.md  quick-start_zh.md  systemd-service.md  systemd-service_zh.md
cryptpilot-crypt/src/: cli.rs  lib.rs  main.rs
cryptpilot-crypt/src/cmd/: close.rs  init.rs  mod.rs  open.rs  show.rs
cryptpilot-crypt/src/cmd/boot_service/: auto_open.rs  mod.rs
cryptpilot-crypt/src/cmd/config/: check.rs
cryptpilot-crypt/src/config/: cached.rs  fs.rs  mod.rs  volume.rs
cryptpilot-crypt/tests/: mkfs.rs  provider_exec.rs  provider_kbs.rs  provider_kms.rs  provider_oidc.rs  provider_otp.rs  three_state_init.rs  volume_tests.rs
cryptpilot-fde/: Cargo.toml  README.md  README_zh.md
cryptpilot-fde/docs/: boot.md  boot_zh.md  configuration.md  configuration_zh.md  cryptpilot_enhance.md  cryptpilot_enhance_zh.md  quick-start.md  quick-start_zh.md  reference-value.md  reference-value_zh.md
cryptpilot-fde/src/: cli.rs  lib.rs  main.rs
cryptpilot-fde/src/cmd/: metadata.rs  mod.rs  show_reference_value.rs
cryptpilot-fde/src/cmd/boot_service/: copy_config.rs  initrd_state.rs  metadata.rs  mod.rs  time_sync.rs
cryptpilot-fde/src/cmd/boot_service/stage/: after_sysroot.rs  before_sysroot.rs  mod.rs
cryptpilot-fde/src/cmd/config/: check.rs  dump.rs  mod.rs
cryptpilot-fde/src/config/: cached.rs  cloud_init.rs  fde.rs  fs.rs  global.rs  initrd_state.rs  mod.rs
cryptpilot-fde/src/disk/: artifacts.rs  current.rs  external.rs  grub.rs  kernel.rs  mod.rs  partition_table.rs  uki.rs
cryptpilot-verity/: Cargo.toml  Makefile  README.md  README_zh.md  build.rs
cryptpilot-verity/benchmark/: benchmark-verity-fuse.sh
cryptpilot-verity/src/: cli.rs  main.rs
cryptpilot-verity/src/cmd/: close.rs  dump.rs  format.rs  mod.rs  open.rs  verify.rs
cryptpilot-verity/src/metadata/: .gitignore  README.md  metadata.fbs  metadata_generated.rs  metadata_hash.fbs  metadata_hash_generated.rs  mod.rs
debian/: .gitignore  changelog  control  copyright  cryptpilot-crypt.postinst  cryptpilot-crypt.postrm  cryptpilot-crypt.prerm  cryptpilot-fde-guest.postinst  cryptpilot-fde-host.links  rules
docs/: boot.md  boot_zh.md  configuration.md  configuration_zh.md  development.md  key-providers.md  key-providers_zh.md
examples/: cryptpilot.toml  fde.toml  global.toml
examples/volumes/: data-temp.conf  data0.conf  data0.toml  data1.conf  data1.toml  data2.conf  data2.toml  data3.toml  data4.toml  data5.toml  swap0.conf  swap0.toml
rpm/alinux3/: cryptpilot.al8.aarch64.buildspec.yaml.template  cryptpilot.al8.x86_64.buildspec.yaml.template
scripts/test/: test-system-encryption.sh  test-volume-encryption.sh
src/: cli.rs  config.rs  gen_crypttab.rs  lib.rs  luks2.rs  main.rs  show.rs  socket.rs  types.rs
src/cmd/: close.rs  crypttab_gen.rs  crypttab_key_supplier.rs  dump_config.rs  init.rs  mod.rs  open.rs  show.rs  systemd_service.rs
src/config/: encrypt.rs  global.rs  mod.rs  volume.rs
src/fs/: cmd.rs  luks2.rs  mkfs.rs  mod.rs  mount.rs  nbd.rs  shell.rs
src/measure/: mod.rs
src/provider/: exec.rs  kbs.rs  kms.rs  mod.rs  oidc.rs  otp.rs  temp.rs  tpm2.rs
tests/: cross_lang_test.sh  test-convert.sh  test-image.Dockerfile
verity-core/: Cargo.toml  README.md  make_testfiles.py
verity-core/src/: config.rs  descriptor.rs  digest.rs  lib.rs  tree.rs
verity-fuse/: Cargo.toml  Makefile
verity-fuse/src/: cli.rs  file_handle_cache.rs  filesystem.rs  inode_mapper.rs  lib.rs
verity-fuse/src/file_verifier/: file_verity_info.rs  mod.rs  verity_verifier.rs
verity-go/: README.md  README_CN.md  go.mod  go.sum
verity-go/metadata/: cross_test.go  gen_fixture.sh  interop_test.go  metadata.fbs  metadata.go  metadata_hash.fbs  metadata_hash.go  metadata_test.go
(+45 files in other folders)
