[package]
authors = ["Kun Lai <laikun@linux.alibaba.com>"]
description = "A utility for protecting data at rest in confidential environment"
edition = "2021"
name = "cryptpilot"
version = "0.1.0"

[dependencies]
anyhow = "1.0.81"
base64 = "0.22.1"
clap = {version = "4.5.4", features = ["derive"]}
comfy-table = "7.1.1"
dialoguer = "0.11.0"
env_logger = {version = "0.11.2", features = ["auto-color", "humantime", "regex"]}
hex = "0.4.3"
kms = {git = "https://github.com/confidential-containers/guest-components.git", tag = "v0.10.0", optional = true, default-features = false, features = ["aliyun"]}
lazy_static = "1.5.0"
libc = "0.2.161"
log = "0.4.20"
rand = {version = "0.8.5", features = ["std_rng"]}
run_script = "0.11.0"
serde = {version = "1.0", features = ["derive"]}
serde_variant = "0.1.3"
tokio = {version = "1.41.0", features = ["rt", "macros", "signal", "rt-multi-thread", "sync", "fs", "net", "io-util"]}
toml = "0.8.19"
shadow-rs = "0.35.2"

[build-dependencies]
shadow-rs = "0.35.2"

[features]
default = ["provider-kbs", "provider-kms", "provider-otp", "provider-tpm2"]
provider-kbs = []
provider-kms = ["dep:kms"]
provider-otp = []
provider-tpm2 = []
