[package]
authors = ["Kun Lai <laikun@linux.alibaba.com>"]
default-run = "cryptpilot"
description = "A utility for protecting data at rest in confidential environment"
edition = "2021"
name = "cryptpilot"
version = "0.2.5"

[dependencies]
again = "0.1.2"
anyhow = "1.0.81"
async-trait = "0.1.83"
base64 = "0.22.1"
block-devs = "0.1.0"
clap = {version = "4.5.4", features = ["derive"]}
comfy-table = "7.1.1"
devicemapper = "0.34.4"
dialoguer = "0.11.0"
dirs = "6.0.0"
documented = "0.9.1"
glob = "0.3.2"
hex = "0.4.3"
kms = {git = "https://github.com/confidential-containers/guest-components.git", tag = "v0.10.0", optional = true, default-features = false, features = ["aliyun"]}
lazy_static = "1.5.0"
libc = "0.2.161"
liblmod = "0.2.0"
loopdev-3 = {git = "https://github.com/stratis-storage/loopdev-3.git", tag = "loopdev-3-v0.5.1"}
mnt = "0.3.1"
nix = {version = "0.29.0", features = ["ioctl", "feature", "time"]}
num_cpus = "1.16.0"
ordermap = "0.5.6"
protobuf = {version = "~3.4.0", optional = true}
rand = {version = "0.8.5", features = ["std_rng"]}
reqwest = {version = "0.12.9", default-features = false, features = ["rustls-tls"]}
rsntp = "4.0.0"
scopeguard = "1.2.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1", optional = true}
serde_variant = "0.1.3"
sha2 = {version = "0.10.8"}
shadow-rs = "0.35.2"
strum = "0.26.3"
tempfile = "3.10.1"
tokio = {version = "1.41.0", features = ["rt", "macros", "signal", "rt-multi-thread", "sync", "fs", "net", "io-util", "process"]}
tokio-util = "0.7.14"
toml = "0.8.19"
toml_edit = {version = "0.22.22", features = ["serde"]}
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
ttrpc = {version = "0.8.0", default-features = false, features = ["async"], optional = true}
which = "7.0.3"
zeroize = {version = "1.8.1", features = ["zeroize_derive"]}

[build-dependencies]
bindgen = "0.71.0"
shadow-rs = "0.35.2"
ttrpc-codegen = {version = "0.4.2", optional = true}

[dev-dependencies]
cgroups-rs = "0.3.4"
ctor = "=0.4.1"
rstest = "0.25.0"
rstest_reuse = "0.7.0"
two-rusty-forks = {version = "0.4.0", features = ["macro"]}

[features]
default = ["provider-kbs", "provider-kms", "provider-otp", "provider-tpm2", "provider-oidc", "provider-exec"]
provider-exec = []
provider-kbs = [
  "dep:ttrpc-codegen",
  "dep:ttrpc",
  "dep:protobuf",
]
provider-kms = ["dep:kms"]
provider-oidc = ["serde_json"]
provider-otp = []
provider-tpm2 = []
