[workspace]
members = [
  "cryptpilot-core",
  "cryptpilot-crypt",
  "cryptpilot-fde",
  "cryptpilot-verity",
]
resolver = "2"

[workspace.package]
authors = ["Kun Lai <laikun@linux.alibaba.com>"]
edition = "2021"
version = "0.3.3"

[workspace.dependencies]
again = "0.1.2"
anyhow = "1.0.81"
async-trait = "0.1.83"
async-walkdir = "2.1.0"
authenticode = {version = "0.4.3", features = ["object", "std"]}
base64 = "0.22.1"
bindgen = "0.71.0"
block-devs = "0.1.0"
clap = {version = "4.5.4", features = ["derive"]}
comfy-table = "7.1.1"
devicemapper = "0.34.4"
dialoguer = "0.11.0"
digest = "0.10.7"
dirs = "6.0.0"
documented = "0.9.1"
futures = "0.3.31"
futures-lite = "2.6.0"
glob = "0.3.2"
hex = "0.4.3"
indexmap = {version = "2.11.0", features = ["serde"]}
kms = {git = "https://github.com/confidential-containers/guest-components.git", tag = "v0.10.0", default-features = false, features = ["aliyun"]}
lazy_static = "1.5.0"
libc = "0.2.161"
libcryptsetup-rs = {version = "0.15.0", features = ["mutex"]}
loopdev-3 = {git = "https://github.com/stratis-storage/loopdev-3.git", tag = "loopdev-3-v0.5.1"}
mnt = "0.3.1"
nix = {version = "0.29.0", features = ["ioctl", "feature", "time"]}
num_cpus = "1.16.0"
object = {version = "0.36", features = ["std"]}
ordermap = "0.5.6"
protobuf = {version = "3.7.2"}
rand = {version = "0.8.5", features = ["std_rng"]}
reqwest = {version = "0.12.23", default-features = false, features = ["rustls-tls"]}
rsntp = "4.0.0"
scopeguard = "1.2.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1", features = ["preserve_order"]}
serde_variant = "0.1.3"
sha1 = "0.10.6"
sha2 = {version = "0.10.8"}
shadow-rs = {version = "0.35.2", default-features = false}
sm3 = "0.4.2"
strum = "0.26.3"
tempfile = "3.10.1"
tokio = {version = "1.43.1", features = ["rt", "macros", "signal", "rt-multi-thread", "sync", "fs", "net", "io-util", "process"]}
tokio-util = "0.7.14"
toml = "0.8.19"
toml_edit = {version = "0.22.22", features = ["serde"]}
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = {version = "0.3.20", features = ["env-filter"]}
ttrpc = {version = "0.8.0", default-features = false, features = ["async"]}
ttrpc-codegen = {version = "0.4.2"}
which = "7.0.3"
zeroize = {version = "1.8.1", features = ["zeroize_derive"]}
