[package]
authors.workspace = true
edition.workspace = true
name = "cryptpilot-crypt"
version.workspace = true

[[bin]]
name = "crypt-gen-template"
path = "src/bin/gen-template/main.rs"

[dependencies]
anyhow = {workspace = true}
async-trait = {workspace = true}
clap = {workspace = true}
comfy-table = {workspace = true}
cryptpilot = {path = "../cryptpilot-core"}
dialoguer = {workspace = true}
documented = {workspace = true}
lazy_static = {workspace = true}
rand = {workspace = true}
scopeguard = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
serde_variant = {workspace = true}
shadow-rs = {workspace = true}
tokio = {workspace = true}
toml = {workspace = true}
toml_edit = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}

[build-dependencies]
shadow-rs = {workspace = true, default-features = true}

[dev-dependencies]
block-devs = {workspace = true}
cgroups-rs = "0.3.4"
ctor = "=0.4.1"
rstest = "0.25.0"
rstest_reuse = "0.7.0"
tokio-util = {workspace = true}
two-rusty-forks = {version = "0.4.0", features = ["macro"]}
