[package]
name = "cryptpilot-fde"
authors.workspace = true
edition.workspace = true
version.workspace = true

[[bin]]
name = "fde-gen-template"
path = "src/bin/gen-template/main.rs"

[dependencies]
cryptpilot = { path = "../cryptpilot-core" }
anyhow = { workspace = true }
async-trait = { workspace = true }
async-walkdir = { workspace = true }
authenticode = { workspace = true }
block-devs = { workspace = true }
clap = { workspace = true }
digest = { workspace = true }
documented = { workspace = true }
futures = { workspace = true }
glob = { workspace = true }
hex = { workspace = true }
indexmap = { workspace = true }
lazy_static = { workspace = true }
nix = { workspace = true }
object = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
sm3 = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
shadow-rs = { workspace = true }

[build-dependencies]
shadow-rs = { workspace = true, default-features = true }
