[package]
authors.workspace = true
edition.workspace = true
name = "cryptpilot-verity"
version.workspace = true

[dependencies]
anyhow = {workspace = true}
async-trait = {workspace = true}
async-walkdir = {workspace = true}
clap = {workspace = true}
flatbuffers = "24.3.25"
fuser = {workspace = true}
futures = {workspace = true}
hex = {workspace = true}
libc = {workspace = true}
memmap2 = "0.9"
mountinfo2 = {workspace = true}
serde = {version = "1.0", features = ["derive"]}
serde_json = {workspace = true}
sha2 = {workspace = true}
shadow-rs = {workspace = true}
tokio = {workspace = true}
tokio-util = {workspace = true}
tracing = {workspace = true}
tracing-log = {workspace = true}
tracing-subscriber = {workspace = true}
verity-core = {path = "../verity-core"}
verity-fuse = {path = "../verity-fuse"}

[build-dependencies]
flatc = {git = "https://github.com/petehayes102/flatc.rs", rev = "7ca870b7c576f95dfc869b0f7aa48b605cb60c70"}# v25.12.19
flatc-rust = "0.2"
shadow-rs = {workspace = true, default-features = true}
