[package]
edition = "2021"
name = "verity-fuse"
version = "0.1.0"

[dependencies]

anyhow = {workspace = true}
cap-std = {workspace = true}
clap = {workspace = true}
fuser = {workspace = true}
hex = {workspace = true}
libc = {workspace = true}
relative-path = {workspace = true}
sha2 = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
verity-core = {path = "../verity-core"}
